Style browser UI elements correctly
By setting `color-scheme` to `dark` for a dark theme, the browser will recognize that the `body` is to be rendered in dark mode. This will cause browser form elements to be rendered in dark theme. This is very apparent with checkboxes in the game UI.

--- a/res/theme_black.css
+++ b/res/theme_black.css
@@ -9,6 +9,7 @@
 /* ******************************************** */
 body.scheme_black {
 	background-color: #000000;
+	color-scheme: dark;
 }
 .scheme_black  #gamePageContainer,
 .scheme_black select,
