--- a/res/theme_minimalist.css
+++ b/res/theme_minimalist.css
@@ -9,6 +9,7 @@
 /**********************************************/
 body.scheme_minimalist {
 	background-color: #0C0D10;
+	color-scheme: dark;
 }
 body.scheme_minimalist.with_background_image,
 .scheme_minimalist .dialog {
