--- a/res/theme_wood.css
+++ b/res/theme_wood.css
@@ -28,6 +28,7 @@
 
 body.scheme_wood {
 	background-color:#201916;
+	color-scheme: dark;
 }
 body.scheme_wood.with_background_image {
 	background:	repeat-x local top left url('img/theme_wood_border_01.png'), #201916;
