--- a/res/theme_grassy.css
+++ b/res/theme_grassy.css
@@ -3,35 +3,35 @@
  */
 
 body.scheme_grassy {
-	font-family: "Trebuchet MS";
-	font-size: 11pt;
+  font-family: "Trebuchet MS";
+  font-size: 11pt;
 
-	background-color: #C6EBA1;
-	background-image: url("img/grass_band.png"); /* source: http://northwaygames.com/wp-content/uploads/band.png */
-	background-repeat: repeat-x;
-	background-attachment: fixed;
-	background-position: center bottom -50px;
+  background-color: #c6eba1;
+  background-image: url("img/grass_band.png"); /* source: http://northwaygames.com/wp-content/uploads/band.png */
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  background-position: center bottom -50px;
 }
 
 .scheme_grassy #topBar > div:first-child > span:last-of-type::after {
-    content: ' Theme by shrx.';
-    text-decoration: none;
+  content: " Theme by shrx.";
+  text-decoration: none;
 }
 
 .scheme_grassy #optionsDiv {
-	padding: 30px;
+  padding: 30px;
 
-	background-color: #C6EBA1;
+  background-color: #c6eba1;
 }
 
 .scheme_grassy #gameContainerId,
 .scheme_grassy .tabInner,
 .scheme_grassy .btn {
-	background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .scheme_grassy #headerLinks {
-	background: none;
+  background: none;
 }
 
 .scheme_grassy #resContainer,
@@ -39,105 +39,105 @@ body.scheme_grassy {
 .scheme_grassy #craftContainer,
 .scheme_grassy #fastHuntContainer,
 .scheme_grassy #fastPraiseContainer {
-	padding-top: 5px;
-	padding-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
-	border: 1px solid gray;
-	background: rgba(255, 255, 255, 0.2);
+  border: 1px solid gray;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .scheme_grassy #resContainer,
 .scheme_grassy #advisorsContainer,
 .scheme_grassy #fastHuntContainer,
 .scheme_grassy #fastPraiseContainer {
-	margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .scheme_grassy #footerLinks {
-	background: rgba(223, 255, 225, 0.7);
-	-webkit-box-shadow: 0 0 5px 5px rgba(223, 255, 225, 0.7);
-			box-shadow: 0 0 5px 5px rgba(223, 255, 225, 0.7);
+  background: rgba(223, 255, 225, 0.7);
+  -webkit-box-shadow: 0 0 5px 5px rgba(223, 255, 225, 0.7);
+  box-shadow: 0 0 5px 5px rgba(223, 255, 225, 0.7);
 }
 
 .scheme_grassy .btn:hover {
-	background: inherit;
+  background: inherit;
 }
 
 .scheme_grassy .btn.disabled:hover {
-	background: rgba(255, 255, 255, 0.2);
-	cursor: inherit;
+  background: rgba(255, 255, 255, 0.2);
+  cursor: inherit;
 }
 
 .scheme_grassy a {
-	text-decoration: none;
+  text-decoration: none;
 
-	color: #930;
+  color: #930;
 }
 
 .scheme_grassy a:hover {
-	color: #cc4100;
+  color: #cc4100;
 }
 
 .scheme_grassy .btn.modern a {
-	color: #930;
+  color: #930;
 }
 
 .scheme_grassy .btn.modern a.enabled {
-	color: initial;
+  color: initial;
 }
 
 .scheme_grassy #gameLog {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .scheme_grassy .tabInner {
-	margin-bottom: 10px;
-	padding-bottom: 20px;
+  margin-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .scheme_grassy #gameContainerId {
-	margin-bottom: 20px;
-	padding-bottom: 15px;
+  margin-bottom: 20px;
+  padding-bottom: 15px;
 }
 
 .scheme_grassy #advisorsContainer {
-	border: none;
-	background: none;
+  border: none;
+  background: none;
 }
 
 .scheme_grassy #resContainer > table {
-	border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 .scheme_grassy #resContainer > table > tr > td,
 .scheme_grassy #craftContainer > table > tr > td {
-	line-height: 140%;
+  line-height: 140%;
 
-	padding-right: 3px;
-	padding-left: 3px;
+  padding-right: 3px;
+  padding-left: 3px;
 }
 
 .scheme_grassy #resContainer > table > tr.odd,
 .scheme_grassy #craftContainer > table > tr.odd {
-	background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .scheme_grassy .button_tooltip {
-	left: 200px;
+  left: 200px;
 
-	background-color: #E1F5CF;
+  background-color: #e1f5cf;
 }
 
 .scheme_grassy a.activeTab {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .scheme_grassy table > tr > td > * {
-	margin-right: auto;
-	margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 .scheme_grassy .currentLeader .name {
-	background: no-repeat top -5px left url("data:image/svg+xml,%3Csvg width='24px' height='24px' viewBox='0 0 24 24' fill='%23cc4100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18.53 19.24H5.4C5.24283 19.2414 5.0893 19.1927 4.96164 19.101C4.83399 19.0094 4.73885 18.8794 4.69 18.73L1.5 9C1.45113 8.86009 1.446 8.70861 1.4853 8.56571C1.52459 8.42281 1.60646 8.29525 1.72 8.2C1.83214 8.10161 1.97141 8.03941 2.11953 8.02157C2.26764 8.00372 2.4177 8.03106 2.55 8.1L8.37 11L11.37 5.18C11.4392 5.06398 11.5373 4.9679 11.6547 4.90118C11.7722 4.83446 11.9049 4.79938 12.04 4.79938C12.1751 4.79938 12.3078 4.83446 12.4253 4.90118C12.5427 4.9679 12.6408 5.06398 12.71 5.18L15.71 11.01L21.54 8.11C21.6708 8.0419 21.8191 8.01501 21.9655 8.03286C22.1119 8.05071 22.2494 8.11247 22.36 8.21C22.4557 8.31491 22.5197 8.44486 22.5445 8.58471C22.5693 8.72456 22.5539 8.86858 22.5 9L19.24 18.72C19.1929 18.8713 19.0985 19.0034 18.9707 19.097C18.8429 19.1906 18.6884 19.2407 18.53 19.24ZM6 17.74H18L20.51 10.25L15.64 12.67C15.5528 12.7146 15.4576 12.7415 15.3599 12.749C15.2623 12.7566 15.1641 12.7446 15.071 12.7139C14.978 12.6832 14.892 12.6344 14.818 12.5702C14.744 12.506 14.6835 12.4278 14.64 12.34L12 7.16L9.37 12.34C9.32648 12.4278 9.26596 12.506 9.19197 12.5702C9.11798 12.6344 9.03197 12.6832 8.93895 12.7139C8.84593 12.7446 8.74774 12.7566 8.65007 12.749C8.5524 12.7415 8.45721 12.7146 8.37 12.67L3.48 10.22L6 17.74Z' /%3E%3C/svg%3E");
-	padding-left: 28px;
-	font-weight: bold;
+  background: no-repeat top -5px left url("data:image/svg+xml,%3Csvg width='24px' height='24px' viewBox='0 0 24 24' fill='%23cc4100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18.53 19.24H5.4C5.24283 19.2414 5.0893 19.1927 4.96164 19.101C4.83399 19.0094 4.73885 18.8794 4.69 18.73L1.5 9C1.45113 8.86009 1.446 8.70861 1.4853 8.56571C1.52459 8.42281 1.60646 8.29525 1.72 8.2C1.83214 8.10161 1.97141 8.03941 2.11953 8.02157C2.26764 8.00372 2.4177 8.03106 2.55 8.1L8.37 11L11.37 5.18C11.4392 5.06398 11.5373 4.9679 11.6547 4.90118C11.7722 4.83446 11.9049 4.79938 12.04 4.79938C12.1751 4.79938 12.3078 4.83446 12.4253 4.90118C12.5427 4.9679 12.6408 5.06398 12.71 5.18L15.71 11.01L21.54 8.11C21.6708 8.0419 21.8191 8.01501 21.9655 8.03286C22.1119 8.05071 22.2494 8.11247 22.36 8.21C22.4557 8.31491 22.5197 8.44486 22.5445 8.58471C22.5693 8.72456 22.5539 8.86858 22.5 9L19.24 18.72C19.1929 18.8713 19.0985 19.0034 18.9707 19.097C18.8429 19.1906 18.6884 19.2407 18.53 19.24ZM6 17.74H18L20.51 10.25L15.64 12.67C15.5528 12.7146 15.4576 12.7415 15.3599 12.749C15.2623 12.7566 15.1641 12.7446 15.071 12.7139C14.978 12.6832 14.892 12.6344 14.818 12.5702C14.744 12.506 14.6835 12.4278 14.64 12.34L12 7.16L9.37 12.34C9.32648 12.4278 9.26596 12.506 9.19197 12.5702C9.11798 12.6344 9.03197 12.6832 8.93895 12.7139C8.84593 12.7446 8.74774 12.7566 8.65007 12.749C8.5524 12.7415 8.45721 12.7146 8.37 12.67L3.48 10.22L6 17.74Z' /%3E%3C/svg%3E");
+  padding-left: 28px;
+  font-weight: bold;
 }
