--- a/res/theme_anthracite.css
+++ b/res/theme_anthracite.css
@@ -807,8 +807,6 @@ body.scheme_anthracite.with_background_image,
 .scheme_anthracite .achievement {
 	display: block;
 	font-size: 15px;
-	margin-right: 120px;
-	margin-left: 120px;
 	height: 34px;
 	background-color: transparent;
 	color: #a0a0a0;
@@ -820,6 +818,10 @@ body.scheme_anthracite.with_background_image,
 	background-repeat: no-repeat;
 	background-attachment: local;
 	background-position: top left;
+}
+.scheme_anthracite .achievement:not(.badge) {
+	margin-right: 120px;
+	margin-left: 120px;
 }
 .scheme_anthracite .achievement:hover {
 	color: #f0f0f0;
