--- a/res/theme_anthracite.css
+++ b/res/theme_anthracite.css
@@ -818,6 +818,9 @@ body.scheme_anthracite.with_background_image,
 	background-repeat: no-repeat;
 	background-attachment: local;
 	background-position: top left;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .scheme_anthracite .achievement:not(.badge) {
 	margin-right: 120px;
