--- a/res/theme_chocolate.css
+++ b/res/theme_chocolate.css
@@ -831,6 +831,9 @@ body.scheme_chocolate.with_background_image {
 	border-bottom-color: rgba(217, 190, 163, 0.8);
 	box-shadow: inset 1px 1px 3px rgba(255, 255, 255, 0.4), inset -2px -2px 3px #202020,
 				1px 1px 3px #101010;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .scheme_chocolate .achievement:hover {
 	color: #eddcc7;
