--- a/res/theme_school.css
+++ b/res/theme_school.css
@@ -691,6 +691,9 @@ body.scheme_school.with_background_image,
     letter-spacing: 1px;
     cursor: default !important;
 	border-radius: 3px 3px 9px 9px;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .scheme_school .achievement:not(.name) {
 	color: #D2D2D2;
