--- a/res/theme_unicorn.css
+++ b/res/theme_unicorn.css
@@ -794,6 +794,9 @@ body.scheme_unicorn.with_background_image {
 	border : 3px ridge #e8dbc7;
 	border-radius: 5px;
 	box-shadow: 0 -1px #e8dfd0, 1px 1px 2px #111922;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 .scheme_unicorn .achievement:hover {
 	color: #f8f6f1;
