--- a/res/theme_anthracite.css
+++ b/res/theme_anthracite.css
@@ -907,7 +907,7 @@ body.scheme_anthracite.with_background_image,
 .scheme_anthracite #calendarSign:hover {
    cursor: default;
 }
-.scheme_anthracite .right-tab-header { /* Log | Chat link on right column */
+.scheme_anthracite .right-tab-header { /* Log | Queue link on right column */
 	color: transparent; /* for separator tab | */
 	font-size: 80%;
  }
@@ -936,9 +936,6 @@ body.scheme_anthracite.with_background_image,
 }
 .scheme_anthracite div#observeButton {
 	height: 35px; /* default height: 30px; */
-}
-.scheme_anthracite #rightTabChat {
-	margin-top: 14px;
 }
 .scheme_anthracite div.console-intro { /* Text on right column : "You are a kitten in a catnip forest." */
 	color: #646464;
