--- a/res/theme_bluish.css
+++ b/res/theme_bluish.css
@@ -975,7 +975,7 @@ body.scheme_bluish {
 .scheme_bluish #calendarSign:hover {
    cursor: default;
 }
-.scheme_bluish .right-tab-header { /* Log | Chat link on right column */
+.scheme_bluish .right-tab-header { /* Log | Queue link on right column */
 	/* default margin-top: 10px; */
 	font-size: 80%;
  }
@@ -994,9 +994,6 @@ body.scheme_bluish {
 	margin-top: 5px; /* default margin-top: 15px */
 	height: 35px; /* default height: 30px; */
 	margin-bottom: 3px;
-}
-.scheme_bluish #rightTabChat {
-	margin-top: 10px;
 }
 .scheme_bluish div.console-intro { /* Text on right column: "You are a kitten in a catnip forest." */
 	color: #f6aa5c;
