--- a/res/theme_dune.css
+++ b/res/theme_dune.css
@@ -1000,16 +1000,13 @@ body.scheme_dune {
 .scheme_dune #calendarSign:hover {
 	cursor: default;
 }
-.scheme_dune .right-tab-header { /* Log | Chat link on right column */
+.scheme_dune .right-tab-header { /* Log | Queue link on right column */
 	font-size: 90%;
 }
 .scheme_dune .right-tab-header a.active {
     color: #fca9fe;
 	text-shadow: 1px 1px 1px #000000;
 	border-top-color: transparent; /* default: border-top: 1px solid rgba(128, 128, 128, 0.4); in default.css */
-}
-.scheme_dune #rightTabChat {
-	margin-top: 20px;
 }
 .scheme_dune div.console-intro { /* Text on right column : "You are a kitten in a catnip forest." */
 	color: #701e79;
