--- a/res/theme_unicorn.css
+++ b/res/theme_unicorn.css
@@ -878,7 +878,7 @@ body.scheme_unicorn.with_background_image {
 .scheme_unicorn #calendarSign:hover {
    cursor: default;
 }
-.scheme_unicorn .right-tab-header { /* Log | Chat link on right column */
+.scheme_unicorn .right-tab-header { /* Log | Queue link on right column */
 	color: #333342; /* for separator tab | */
 	font-size: 80%;
  }
@@ -907,9 +907,6 @@ body.scheme_unicorn.with_background_image {
 }
 .scheme_unicorn div#observeButton {
 	height: 35px; /* default height: 30px; */
-}
-.scheme_unicorn #rightTabChat {
-	margin-top: 14px;
 }
 .scheme_unicorn div.console-intro { /* Text on right column : "You are a kitten in a catnip forest." */
 	color: #515c68;
