New achievements & basges (#71)
* Add flag to track if the current run was started without benefit of Chronospheres

* Add silly things that happen if the player shatters 500 TCs during a temporal paradox.

* Add a bunch of new achievements & basges

* Don't count unethical starred achievements

* Update the achievements panel live whenever anything changes.

* Update badges panel live whenever anything changes.

* Make the basges panel much more readable

* Silly formatting for some basges

* Make Fantastic Fur Color work in all color themes & fix issue with current leader overlapping their own crown.

* Add achievement for Challenge completions.

* Achievements UI improvement: Handle text overflow cleanly (usually using ellipses).

--- a/res/theme_oil.css
+++ b/res/theme_oil.css
@@ -750,11 +750,16 @@ body.scheme_oil,
 	margin: 10px; /* default margin-bottom: 10px; */
     height: 40px;
     background-color: #000000;
-    color: #909090;
     text-shadow: rgba(192, 192, 192) 2px 0 10px; /* color #BBC0CA */
     letter-spacing: 1px;
-	border-color : rgba(255, 201, 0, 0.3); /* color #FFC900; */
 	border-radius: 19px;
+	white-space: nowrap !important;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.scheme_oil .achievement:not(.name) {
+	color: #909090;
+	border-color : rgba(255, 201, 0, 0.3); /* color #FFC900; */
 }
 .scheme_oil .achievement:hover {
 	color: #E0E0E0;
