--- a/res/theme_spooky.css
+++ b/res/theme_spooky.css
@@ -929,13 +929,24 @@ body.scheme_spooky.with_background_image {
 .scheme_spooky .census-block:hover {
 	outline-color: #6c6c6c;
 }
+.scheme_spooky .census-block .links-container span {
+	border-radius: 50% 50% 1px 1px;
+	max-width: 2ch;
+	background: transparent !important;
+	outline-width: 1px !important;
+}
 .scheme_spooky .census-block.simLeader {
 	outline-color: #8e29d4;
 }
 .scheme_spooky .census-block.simLeader:hover {
 	outline-color: #e57333;
 }
-.scheme_spooky .census-block.simLeader a.leaderHref {
+.scheme_spooky .census-block.simLeader .leaderHref {
+	border: none;
+	outline: none;
+}
+.scheme_spooky .census-block.simLeader .leaderHref,
+.scheme_spooky .census-block.simFavorite .favoriteHref {
 	color: #53a8e0;
 }
 .scheme_spooky .census-block .info { /* info of kitten */
