--- a/res/theme_catnip.css
+++ b/res/theme_catnip.css
@@ -759,11 +759,25 @@ body.scheme_catnip {
 .scheme_catnip .census-block a {
 	color: #b6bda2;
 }
+.scheme_catnip .census-block .links-container span.btn.modern {
+	color: #b6bda2;
+	background-color: rgba(113, 148 , 64, 0.5);
+}
 .scheme_catnip .census-block a:hover {
 	color: #ebede5;
 }
-.scheme_catnip .census-block.simLeader a.leaderHref {
-	color: #00b5bf;
+.scheme_catnip .census-block .links-container span.btn.modern:hover {
+	color: #ebede5;
+	background-color: rgba(113, 148 , 64, 0.75);
+}
+.scheme_catnip .census-block.simLeader .leaderHref {
+	background: transparent !important;
+	border: none !important;
+}
+.scheme_catnip .census-block.simLeader .leaderHref,
+.scheme_catnip .census-block.simFavorite .favoriteHref {
+	color: #00b5bf !important;
+	text-shadow: 0 0 2px #fafbf9;
 }
 .scheme_catnip .census-block .info { /* info of kitten */
 	font-size: 0.9em;
